# wargames

./: .gitignore  Cargo.toml  README.md
crates/wargames-core/: Cargo.toml
crates/wargames-core/src/: actions.rs  engine.rs  language.rs  lib.rs  log.rs  predict.rs  proxies.rs  scenario.rs  state.rs  triggers.rs
crates/wargames-core/src/agents/: learning.rs  mod.rs  personas.rs
crates/wargames-core/src/scenario/: corpus.rs  generator.rs  mod.rs
crates/wargames-tui/: Cargo.toml
crates/wargames-tui/src/: app.rs  config.rs  lib.rs  llm.rs  login.rs  main.rs  net.rs  panes.rs  picker.rs  settings.rs  splash.rs  text.rs  theme.rs  tts.rs  ui_anim.rs  widget_action.rs  widget_comms.rs  widget_defcon.rs  widget_log.rs  widget_predict.rs  widget_radar.rs  widget_receiving_popup.rs  widget_spinner.rs  widget_state.rs  widget_world.rs
docs/: LEARNINGS.md  MODERNIZED_PLAN.md  THIS_PLAN.md  ai_vs_ai_plan.md
docs/superpowers/specs/: 2026-07-07-receiving-popup-design.md
examples/: settings.sample.json
scenarios/: baltic_sea_2024.json  black_sea_2024.json  eastern_med_2024.json  eastern_med_proxy.json  korean_peninsula_2024.json  north_atlantic_1983.json  red_sea_2024.json  red_sea_freelance.json  south_china_sea_2024.json  taiwan_strait_2024.json
scripts/: install.sh  smoke.sh
