[package]
name = "wargames-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Pure rules engine for the WOPR Wargames TUI: state, actions, triggers, predictions."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }